Improved CSV code and clean other issues.